fix a small overflow at the main page

--- a/css/main.css
+++ b/css/main.css
@@ -442,7 +442,7 @@ main {
                 }
 
                 & > .name {
-                  font-size: 1.2rem;
+                  font-size: 1rem;
                 }
               }
 
